--- a/requirements.txt
+++ b/requirements.txt
@@ -64,3 +64,11 @@ whitenoise==6.9.0
 xhtml2pdf==0.2.17
 django-storages[s3]>=1.14.2
 boto3>=1.34.0
+python-dotenv>=1.0
+django-storages>=1.14
+boto3>=1.34
+dj-database-url>=2.1
+psycopg2-binary>=2.9
+whitenoise>=6.6
+gunicorn>=21.2
+Django>=5.0
